--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,36 @@ body {
 	user-select: none;
 }
 
+body.round-2 .simon{
+	transform: rotate(30deg) scale(1.25);
+}
+body.round-3 .simon{
+	transform: rotate(720deg);
+}
+body.round-4 .simon{
+	transform: rotate(720deg) scale(1.25);
+}
+body.round-5 .simon{
+	transform: rotate(-30deg) scale(0.5);
+}
+body.round-6 .simon{
+	transform: rotate(-30deg) scale(1.1);
+}
+body.round-7 .simon{
+	transform: rotate(-30deg) scale(1.1);
+}
+body.round-8 .simon{
+	transform: rotate(95deg);
+}
+body.round-9 .simon{
+	transform: rotate(105deg);
+	opacity: 0.8;
+}
+body.round-10 .simon{
+	transform: rotate(75deg);
+	opacity: 1;
+}
+
 h1 {
 	margin: 1em 0 2em;
 	text-align: center;
@@ -56,6 +86,7 @@ p[data-action="lose"] {
     -webkit-box-shadow: 2px 1px 12px #aaa;
     -o-box-shadow: 2px 1px 12px #aaa;
     box-shadow: 2px 1px 12px #aaa;
+	transition: all 1s;
 }
 
 .tile {
@@ -77,10 +108,12 @@ p[data-action="lose"] {
 	border-radius: 150px 150px 150px 150px;
 	position: absolute;
 	text-indent: 10000px;
+	transition: all 0.25s;
 }
 
 .red:hover, .blue:hover, .yellow:hover, .green:hover {
-	border: 2px solid black
+	border: 2px solid black;
+	transform: scale(1.1);
 }
 
 .red {
@@ -88,11 +121,26 @@ p[data-action="lose"] {
 	clip: rect(0px, 300px, 150px, 150px);
 	width: 296px;
 }
+body.round-4 .red:hover{
+	background-image: url(../imgs/1.jpeg);
+	box-shadow: inset 0 0 300px red, inset 0 0 300px red, inset 0 0 300px red;
+}
+body.round-6 .red:hover{
+	background-image: url(../imgs/01.gif);
+}
 
 .blue {
 	background: dodgerblue;
 	clip: rect(0px, 150px, 150px, 0px);
 	width: 300px;
+}
+body.round-4 .blue:hover{
+	background-image: url(../imgs/2.jpeg);
+	box-shadow: inset 0 0 300px dodgerblue, inset 0 0 300px dodgerblue, inset 0 0 300px dodgerblue;
+	background-position-x: -35px;
+}
+body.round-6 .blue:hover{
+	background-image: url(../imgs/02.gif);
 }
 
 .yellow {
@@ -100,11 +148,29 @@ p[data-action="lose"] {
 	clip: rect(150px, 150px, 300px, 0px);
 	width: 300px;
 }
+body.round-4 .yellow:hover{
+	background-image: url(../imgs/3.jpeg);
+	box-shadow: inset 0 0 300px yellow, inset 0 0 300px yellow, inset 0 0 300px yellow;
+	background-position-y: -60px;
+}
+body.round-6 .yellow:hover{
+	background-image: url(../imgs/03.gif);
+}
 
 .green {
 	background: #BEDE15;
 	clip: rect(150px,300px, 300px, 150px);
 	width: 296px;
+}
+body.round-4 .green:hover{
+	background-image: url(../imgs/4.jpeg);
+	box-shadow: inset 0 0 300px green, inset 0 0 300px green, inset 0 0 300px green;
+	background-position-x: 90px;
+	background-position-y: 90px;
+}
+body.round-6 .green:hover{
+	background-image: url(../imgs/04.gif);
+	background-position: -40px 100px;
 }
 
 .game-info {
